# panionfrontend

./: .replit  EXPORT.md  README-export.md  README.md  check-localstorage.js  check_websockets.py  clara_window.py  export-clara-desktop.js  export-clara.js  memories.json  newyork_task.json  package-lock.json  package.json  pyproject.toml  reset-taskbar.js  standalone-server.js  tailwind.config.ts  task.json  task_output.json  test-storage.js  unpin-task.js
attached_assets/: Pasted--Rendered-more-hooks-than-during-the-previous-render-at-SettingsAgent-https-eacfdf3b-87a6-1746654645704.txt  Pasted-Core-Features-of-Manus-AI-Autonomous-Agent-Capabilities-Executes-multi-step-tasks-without-user-in-1746744658788.txt  Pasted-Data-Ingestion-Scraping-Web-Scraper-Plugin-already-present-For-scraping-web-data-API-Connector-1746717986007.txt  Pasted-Error-TabsList-must-be-used-within-Tabs-at-https-265d5a94-1142-4356-b6c2-d36840850e14-0-1747068787055.txt  Pasted-Goal-Transform-my-current-Clara-chat-interface-into-a-modular-agent-based-desktop-environment-lik-1746135150872.txt  Pasted-Prompt-for-Replit-AI-Build-Out-Panion-s-UI-System-I-ve-transformed-a-chatbot-into-an-AI-native-OS-c-1746138093724.txt  Pasted-ReferenceError-MessageSquare-is-not-defined-at-Desktop-https-eacfdf3b-87a6-404f-b5df-005c9-1746580093083.txt
client/: index.html
config/: daddy_data_config.yaml
data/: knowledge_graph.json  proxies.json
export/: .env.example  README.md  package.json
panion/: .gitignore  README.md  api_adapter.py  basic_websocket_server.py  main_panion.py  requirements.txt  setup.py  (+7 more)
(+642 files in other folders)
