[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.115.12",
    "free-proxy>=1.1.3",
    "lxml>=5.4.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.6",
    "pillow>=11.2.1",
    "playwright>=1.52.0",
    "proxybroker>=0.3.2",
    "pydantic>=2.11.4",
    "python-docx>=1.1.2",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "selenium>=3.141.0",
    "uvicorn[standard]>=0.34.2",
]
